WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108494
[BlackBerry] CookieParser should ignore invalid/unsupported attributes instead of ignoring the cookie
https://bugs.webkit.org/show_bug.cgi?id=108494
Summary
[BlackBerry] CookieParser should ignore invalid/unsupported attributes instea...
otcheung
Reported
2013-01-31 09:33:37 PST
cookie parser should not ignore a cookie with an invalid attribute (and should not replace the values of other valid attributes). It should ignore the attribute only.
Attachments
Patch
(10.30 KB, patch)
2013-01-31 09:50 PST
,
otcheung
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
otcheung
Comment 1
2013-01-31 09:50:01 PST
Created
attachment 185799
[details]
Patch
Rob Buis
Comment 2
2013-01-31 10:38:11 PST
Comment on
attachment 185799
[details]
Patch Looks good.
WebKit Review Bot
Comment 3
2013-01-31 11:08:01 PST
Comment on
attachment 185799
[details]
Patch Clearing flags on attachment: 185799 Committed
r141446
: <
http://trac.webkit.org/changeset/141446
>
WebKit Review Bot
Comment 4
2013-01-31 11:08:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug