[BlackBerry] CookieParser should ignore invalid/unsupported attributes instead of ignoring the cookie https://bugs.webkit.org/show_bug.cgi?id=108494

PR 287832
Patch by Otto Derek Cheung <otcheung@rim.com> on 2013-01-31
Reviewed by Rob Buis.
Internally Reviewed by Liam Quinn.

A short-term fix for CookieParser to not blow up when a Set-Cookie header has an invalid
or unsupported cookie attribute.

We will ignore the attribute only, not the entire cookie.

Also, making sure the parser won't replace values of valid attributes when evaluating an unsupported
cookie with the same length and same first character as a supported attribute.

Tested using opera cookie and browser.swlab.rim.net cookies test suite. Tested using regular sites that
has a login mechanism.

* platform/blackberry/CookieParser.cpp:
(WebCore::CookieParser::parseOneCookie):

Canonical link: https://commits.webkit.org/126716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141446 268f45cc-cd09-0410-ab3c-d52691b4dbfc